--- a/css/styles.css
+++ b/css/styles.css
@@ -194,7 +194,7 @@ button {
 
 .footer-address:hover,
 .footer-address:focus {
-  color: var(--accent-color);
+  color: var(--first-button-color);
 }
 
 /* --------------- PORTFOLIO----------------- */
@@ -212,6 +212,12 @@ button {
 }
 
 .filter-btn:hover {
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  background-color: var(--accent-color);
   color: var(--first-button-color);
 }
 
