--- a/css/styles.css
+++ b/css/styles.css
@@ -845,7 +845,7 @@ button {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: rotate(0) translate(-50%, -50%) scale(1);
   transition: tranform 300ms;
 }
 
@@ -863,8 +863,28 @@ button {
   justify-content: center;
 }
 
+.modal-title {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.3;
+  color: var(--header-text-color);
+  text-align: center;
+}
+
 .is-hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
+}
+
+.modal-input {
+  width: 100%;
+  height: 45px;
+  margin-bottom: 10px;
+  border: 1px solid #999999;
+  border-radius: 4px;
+  outline: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: transparent;
 }
