--- a/css/styles.css
+++ b/css/styles.css
@@ -344,7 +344,7 @@ button {
   border: none;
   border-radius: 4px;
   max-height: 50px;
-  color: var(--first-color);
+  color: var(--header-title-color);
   background-color: var(--accent-color);
   cursor: pointer;
   padding: 10px 32px;
