--- a/css/styles.css
+++ b/css/styles.css
@@ -846,6 +846,7 @@ button {
   left: 50%;
   transform: rotate(0) translate(-50%, -50%) scale(1);
   transition: tranform 300ms;
+  padding: 40px;
 }
 
 .modal-close {
@@ -857,8 +858,7 @@ button {
   background-color: transparent;
   border: 1px solid #999999;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
+  border-radius: 50%;
   justify-content: center;
 }
 
@@ -868,6 +868,7 @@ button {
   line-height: 1.3;
   color: var(--header-text-color);
   text-align: center;
+  margin-bottom: 15px;
 }
 
 .is-hidden {
@@ -879,11 +880,94 @@ button {
 .modal-input {
   width: 100%;
   height: 45px;
-  margin-bottom: 10px;
   border: 1px solid #999999;
   border-radius: 4px;
   outline: none;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
   background-color: transparent;
+}
+
+.modal-input:focus + .input-icon {
+  fill: var(--accent-color);
+}
+
+.modal-input:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-input::placeholder .modal-text::placeholder {
+  font-size: 14px;
+  color: #000000;
+  opacity: 0.7;
+}
+
+.modal-input-text {
+  font-size: 12px;
+  display: block;
+  margin-bottom: 5px;
+  color: var(--main-text-color);
+}
+
+.modal-text {
+  width: 100%;
+  height: 100px;
+  border: 1px solid #999999;
+  border-radius: 4px;
+  outline: none;
+  padding: 10px;
+  resize: none;
+  background-color: transparent;
+}
+
+.modal-form-field {
+  margin-bottom: 10px;
+}
+
+.input-icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 10;
+}
+
+.modal-input-wrap {
+  position: relative;
+}
+
+.modal-btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  border: none;
+  border-radius: 4px;
+  max-height: 50px;
+  color: var(--header-title-color);
+  background-color: var(--accent-color);
+  cursor: pointer;
+  padding: 10px 75px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0 auto;
+  display: block;
+}
+
+.modal-check-text {
+  font-size: 14px;
+  color: var(--main-text-color);
+}
+
+.modal-check-text::before {
+  content: '';
+  width: 16px;
+  height: 15px;
+  border: 2px solid #000000;
+  margin-right: 5px;
+  display: block;
+  border-radius: 2px;
+}
+
+.modal-check::checked + .modal-check-text::before {
+  background-color: var(--hover-color);
 }
