--- a/css/styles.css
+++ b/css/styles.css
@@ -724,6 +724,7 @@ button {
 }
 
 .footer-submit-form {
+  
   display: flex;
 }
 
@@ -930,7 +931,6 @@ button {
   background-color: transparent;
   border: 1px solid #999999;
   border-radius: 50%;
-  border-radius: 50%;
   justify-content: center;
 }
 
@@ -962,7 +962,7 @@ button {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   box-sizing: border-box;
-  padding-left: 42px;
+  padding-left: 40px;
   padding-right: 16px;
   background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1002,10 +1002,6 @@ button {
   background-color: transparent;
 }
 
-.modal-form-field {
-  margin-bottom: 10px;
-}
-
 .input-icon {
   position: absolute;
   top: 50%;
@@ -1042,10 +1038,11 @@ button {
 }
 
 .modal-check-text {
+  justify-content: center;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--third-color);
+  color: var(--main-text-color);
   display: flex;
   position: relative;
   align-items: center;
@@ -1085,11 +1082,16 @@ button {
   justify-content: center;
 }
 
+.modal-form-fiel {
+  margin-bottom: 20px
+}
+
 .modal-form-field {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 .input-modal-wrap {
+  margin-bottom: 10px;
   position: relative;
 }
 
