--- a/css/styles.css
+++ b/css/styles.css
@@ -322,15 +322,12 @@ button {
 }
 
 .main-btn {
-  font-family: Roboto;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-
   border: none;
   border-radius: 4px;
-
   max-height: 50px;
   color: var(--header-title-color);
   background-color: var(--accent-color);
@@ -769,7 +766,7 @@ button {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: var(--first-button-color);
+  color: var(--first-title-color);
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -925,13 +922,15 @@ button {
 
 .modal-close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 8px;
+  right: 8px;
   width: 30px;
   height: 30px;
   background-color: transparent;
   border: 1px solid #999999;
   border-radius: 50%;
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -939,7 +938,6 @@ button {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
-  text-align: center;
   color: var(--header-text-color);
   text-align: center;
   letter-spacing: 0.03em;
@@ -953,9 +951,9 @@ button {
 }
 
 .form-btn {
-    display: block;
-    margin: 0 auto;
-    padding: 10px 56px;
+  display: block;
+  margin: 0 auto;
+  padding: 10px 56px;
 }
 
 .modal-input {
@@ -970,11 +968,13 @@ button {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus + .input-icon {
+.modal-input:focus + .input-icon,
+.modal-input:hover + .input-icon {
   fill: var(--accent-color);
 }
 
-.modal-input:focus {
+.modal-input:focus,
+.modal-input:hover {
   border-color: var(--accent-color);
 }
 
@@ -1010,6 +1010,10 @@ button {
 
 .modal-form-field {
   margin-bottom: 30px;
+}
+
+.modal-form-fiel {
+  margin-bottom: 10px;
 }
 
 .input-icon {
@@ -1093,11 +1097,10 @@ button {
 }
 
 .modal-form-field {
-  margin-bottom: 30px
+  margin-bottom: 30px;
 }
 
 .input-modal-wrap {
-  margin-bottom: 10px;
   position: relative;
 }
 
